<resources>
    <string name="app_name">ProjectMarcus</string>
    <string name="hello_user">Hello user</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Closed</string>
    <string name="sign_out">Wyloguj się</string>
    <string name="expense_name">Piżama</string>
    <string name="expense_date">16.08.2023</string>
    <string name="expense_label">Kwota wydatku:</string>
    <string name="avatar">avatar</string>
    <string name="price">23,08 zł</string>
    <string name="expense_details_button">Szczegóły</string>
    <string name="project_name">Projekt Ulubiony</string>
    <string name="company_name">Franwear S.A.</string>
    <string name="last_expenses_label">Ostatnie wydatki</string>
    <string name="last_expenses_label_information">Wydatki z ostatnich 30 dni</string>
    <string name="last_expenses_value">23.08 zł</string>
    <string name="your_expenses_label">Twoje wydatki</string>
    <string name="your_expenses_value">12,50 zł</string>
    <string name="rest_of_budget_value">-150.21 zł</string>
    <string name="rest_of_budget_label">Pozostały budżet</string>
    <string name="add_new_expense_button">Dodaj nowy wydatek</string>
    <string name="edit">Edytuj widok</string>
    <string name="pin">Przypnij</string>
    <string name="expense_title_hint">Tytuł</string>
    <string name="date_hint">Data wydatku</string>
    <string name="nip_hint">NIP sprzedawcy</string>
    <string name="shopping_place_hint">Miejsce zakupu</string>
    <string name="description_hint">Opis</string>
    <string name="selected_positions">Wyszczególnione pozycje</string>
    <string name="sum">Suma</string>
    <string name="pln">PLN</string>
    <string name="currency_hint">Waluta</string>
    <string name="confirm_button">Zatwierdź</string>
    <string name="pln_item">PLN</string>
    <string name="add_postion">Dodaj pozycje</string>
    <string name="add_position">Dodaj pozycję</string>
    <string name="item_name">Nazwa produktu</string>
    <string name="price_hint">cena</string>
    <string name="amount">Kwota:</string>
    <string name="amount_value">1299,99</string>
    <string name="nip">123456789</string>
    <string name="place">IKEA Targówek</string>
    <string name="shoes">Kapcie</string>
    <string name="shoes_price">19,99 PLN</string>
    <string name="last_projects_label">Ostatnie projekty</string>
    <string name="dashboard">Strona główna</string>

    <string-array name="currencies">
        <item>PLN</item>
        <item>USD</item>
        <item>EUR</item>
        <item>JPY</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNH</item>
        <item>HKD</item>
        <item>NZD</item>
    </string-array>
</resources>